July 2, 2008 (ntrel)
  Update to use document pointers.
  Update MY_GEANY_API_VER now we use p_document->close().
  Update for new PLUGIN_ macro names.
  Add comment about reloading in glspi_open().
  Rename GeanyCallbacks, geany_callbacks symbol.

July 1, 2008 (ntrel)
  Begin updating for Geany 0.15 API changes.
  Use main_widgets instead of old app.
  Include some Geany headers due to moved definitions.
  Add glspi_geany_functions.
  Use new _prefs structs.
  Update DOCS macro usage for documents_array.

Mar 24, 2008
  Released version 0.7.0

Mar 23, 2008
  Added a new examples folder "work" with three new scripts:
    edit-test-script.lua; run-test-script.lua; install-test-script.lua
  These should make it a little easier for users to develop and save
  their own personal scripts.
  Also added "examples/edit/calculator.lua" -
  The idea came from the "Plugin Wishlist" on the Geany website, only
  this one can even do some fancy stuff like 'sqrt(pi^2*sin(rad(45)))'

Mar 14, 2008
  Revised configure.in and Makefile.am to support Geany's new header
  installation and pkg-config features, so the build configuration
  no longer requires the --with-geany-src option.

Mar 13, 2008
  Added support for Geany's new built-in keybinding API.
  This means that scripts can now take advantage of Geany's
  preferences system to configure keybindings.
  See ./docs/geanylua-keys.html for more info.

Feb 21, 2008
  Code cleanup to quiet some compiler warnings.
  Fix to compile with -DGEANY_DISABLE_DEPRECATED flag.

Feb 21, 2008
  New function: optimize() disables line info and elapsed time counter
  for scripts that need all the CPU time they can get.
  Also found and fixed a nasty crash bug in the filter-parsing code for
  the pickfile() function.

Feb 20, 2008
  Added a copy of Enrico Colombini and Thomas Lauer's "Lua Short Reference"
  to the GeanyLua docs. This provides a convenient and concise guide to the
  Lua language and its core libraries.

Feb 19, 2008